[package]
name = "ccgt"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
sha2 = "0.9"
hmac = "0.11"
dotenv = "0.15"
base64 = "0.13"
yaml-rust = "0.4"
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
reqwest = {version = "0.11.16", features = ["json", "blocking"]}
