[package]
name = "ccgt"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
sha2 = "0.9"
hmac = "0.11"
log = "0.4.17"
dotenv = "0.15"
base64 = "0.13"
chrono = "0.4.24"
yaml-rust = "0.4"
serde_json = "1.0"
serde_yaml = "0.8.26"
env_logger = "0.10.0"
rust_decimal = "1.29"
rust_decimal_macros = "1.29"
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
reqwest = {version = "0.11.16", features = ["json", "blocking"]}
signal-hook = { version = "0.3.15", features = ["extended-siginfo"] }
